--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "activationCommands": {
     "atom-workspace": "kiom-preview:toggle"
   },
-  "repository": "https://github.com/help-vitasoft/kiom-preview.git",
+  "repository": "https://github.com/atom/kiom-preview",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
