--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "yamljs": "^0.3.0"
   }
 }
