--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "copy-dir": "^1.1.0",
     "fs": "0.0.1-security",
     "js-yaml": "^3.13.1",
     "yamljs": "^0.3.0"
